--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -853,6 +853,8 @@
     "must_3_characters": "Must be at least 3 characters",
     "min_quantity": "At least one card is required",
     "max_quantity": "You can not add more than {{ max }} cards",
+    "existing_cards_in_collection": "Existing Cards in Collection",
+    "quantity_description": "If card already exists in your collection, this will increase its quantity.",
     "move_to_binder": "Move to Binder",
     "move_to_binder_message": "How many cards do you want to move into a binder?",
     "any_set": "Any Set",
