--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -852,6 +852,8 @@
     "must_3_characters": "Deve ter pelo menos 3 caracteres",
     "min_quantity": "Pelo menos uma carta é obrigatória",
     "max_quantity": "Você não pode adicionar mais que {{ max }} cartas",
+    "existing_cards_in_collection": "Cartas Existentes na Coleção",
+    "quantity_description": "Se a carta já existir na sua coleção, isso aumentará sua quantidade.",
     "move_to_binder": "Mover para Carpeta",
     "move_to_binder_message": "Quantas cartas deseja mover para uma carpeta?",
     "any_set": "Qualquer Expansão",
