feat: add delete deck functionality with confirmation dialog and update translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -126,7 +126,8 @@
     "sort_by_name": "Name",
     "sort_by_capacity": "Capacity",
     "sort_by_clan": "Clan",
-    "sort_by_group": "Group"
+    "sort_by_group": "Group",
+    "delete": "Delete"
   },
   "deck_builder": {
     "deck_not_exists": "Deck doesn't exists. Please try again later.",
