feat: add translation for "+Master Phase" in English, Spanish, French, and Portuguese

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -689,6 +689,7 @@
     },
     "taints": {
       "+Intercept": "+Intercept",
+      "+Master Phase": "+Master Phase",
       "+Stealth": "+Stealth",
       "+Bleed": "+Bleed",
       "+Strength": "+Strength",
