--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -688,6 +688,7 @@
     },
     "taints": {
       "+Intercept": "+Intercepción",
+      "+Master Phase": "+Fase Heril",
       "+Stealth": "+Sigilo",
       "+Bleed": "+Sangrado",
       "+Strength": "+Fuerza",
