--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -688,6 +688,7 @@
     },
     "taints": {
       "+Intercept": "+Interceptação",
+      "+Master Phase": "+Fase Mestre",
       "+Stealth": "+Furtividade",
       "+Bleed": "+Bleed",
       "+Strength": "+Força",
