feat: implement delete dialog for decks with permanent deletion option and update translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -441,6 +441,7 @@
     "ok": "Ok",
     "cancel": "Cancel",
     "delete": "Delete",
+    "delete_permanently": "Delete Permanently",
     "import": "Import",
     "close": "Close",
     "loading": "Loading",
