--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -317,7 +317,7 @@
     "my_decks": "Meus Baralhos",
     "bookmarks": "Meus Favoritos",
     "public_profile": "Perfil Público",
-    "profile_settings": "Configurações de perfil",
+    "settings": "Configurações",
     "logout": "Sair",
     "theme": "Tema",
     "notifications": "Notificações",
@@ -475,7 +475,7 @@
     "player": "Jogador"
   },
   "user_profile": {
-    "settings": "Configurações de perfil",
+    "profile_settings": "Configurações de perfil",
     "profile_image_alert": " Para a imagem de perfil usamos <a class='fw-bold' href='https://gravatar.com/profiles/edit' target='_blank'>Gravatar</a>. Seu Gravatar é uma imagem e um perfil público que segue você de um lugar para outro quando faz coisas como comentário ou publica em uma página de blog.",
     "display_name": "Nome de exibição",
     "profile_image": "URL da imagem de perfil (Substituir Gravatar)",
@@ -486,8 +486,9 @@
     "password_requirements": "Requisitos de senha",
     "password_requirements_detail": "Para criar uma nova senha, você deve ter todos os seguintes requisitos:",
     "password_not_same": "Não pode ser a mesma que a senha anterior",
-    "save": "Salvar perfil",
-    "error": "Ocorreu um erro ao atualizar suas configurações."
+    "save": "Salvar",
+    "error": "Ocorreu um erro ao atualizar suas configurações.",
+    "security_settings": "Configurações de segurança"
   },
   "user_public_profile": {
     "deck": "baralho",
